--- a/tornadoFrame1/logconfig/log_rotate_conf.ini
+++ b/tornadoFrame1/logconfig/log_rotate_conf.ini
@@ -28,7 +28,7 @@ encoding=UTF-8
 class=logging.handlers.RotatingFileHandler
 level=INFO
 formatter=form02
-args=("../logs/rotateLog.log","a",10*1024*1024,5,"UTF-8")
+args=("./logs/rotateLog.log","a",10*1024*1024,5,"UTF-8")
 
 ##################### formatter
 [formatters]
