--- a/tornadoFrame1/logconfig/log_time_rotate_conf.ini
+++ b/tornadoFrame1/logconfig/log_time_rotate_conf.ini
@@ -1,6 +1,6 @@
 #################### loggers
 [loggers]
-keys=root,time_rotate
+keys=root,time_rotate,viewIndex,MySql,Oracle
 
 [logger_root]
 level=DEBUG
@@ -12,9 +12,24 @@ handlers=hand01,hand02
 QualName=time_rotate
 propagate=0
 
+[logger_viewIndex]
+handlers=hand01,hand03
+QualName=viewIndex
+propagate=0
+
+[logger_MySql]
+handlers=hand01,hand04
+QualName=MySql
+propagate=0
+
+[logger_Oracle]
+handlers=hand01,hand05
+QualName=Oracle
+propagate=0
+
 ###################### handler
 [handlers]
-keys=hand01,hand02
+keys=hand01,hand02,hand03,hand04,hand05
 
 [handler_hand01]
 class=StreamHandler
@@ -30,9 +45,27 @@ level=INFO
 formatter=form02
 args=(r"./logs/timeRotateLog.log","s",3600,5,"UTF-8")
 
+[handler_hand03]
+class=logging.handlers.TimedRotatingFileHandler
+level=INFO
+formatter=form02
+args=(r"./logs/viewIndex.log","s",60,5,"UTF-8")
+
+[handler_hand04]
+class=logging.handlers.TimedRotatingFileHandler
+level=INFO
+formatter=form03
+args=(r"./logs/MySql.log","s",60,5,"UTF-8")
+
+[handler_hand05]
+class=logging.handlers.TimedRotatingFileHandler
+level=INFO
+formatter=form02
+args=(r"./logs/Oracle.log","s",60,5,"UTF-8")
+
 ##################### formatter
 [formatters]
-keys=form01,form02
+keys=form01,form02,form03
 
 [formatter_form01]
 format=%(asctime)s %(filename)s[line:%(lineno)d] %(levelname)s%(message)s
@@ -42,3 +75,6 @@ datefmt=%a,%d %b %Y %H:%M:%StreamHandler
 format = %(asctime)s [%(module)s][thread:%(thread)d] %(pathname)s[line%(lineno)d][%(levelname)s]:%(message)s
 #datefmt=%a,%d %b %Y %H:%M:%S
 #datefmt=%Y%m%d %H:%M:%S
+
+[formatter_form03]
+format = %(asctime)s [%(module)s][thread:%(thread)d] [line%(lineno)d][%(levelname)s]:%(message)s
